--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         function passfn() {
           var pass = document.getElementById("pass").value;
           console.log(pass);
-          if (pass=="19/28/07") {
+          if (pass=="19/10/28/07") {
             console.log(pass);
             window.location.href = "./page2.html";
           } else {
